Fix title and text sizes on mobile media

--- a/src/components/Caption/Caption.module.css
+++ b/src/components/Caption/Caption.module.css
@@ -5,13 +5,16 @@
   margin: 0 24px;
   padding: 10px;
   text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  color: var(--color-text);
 }
 
-.wrapper * {
+/* .wrapper * {
   padding: 0;
   color: var(--color-text);
   font-weight: 700;
-}
+} */
 
 @media tablet {
   .wrapper {
