--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,6 +3,7 @@
 
 .card {
   padding: 10px;
+  background-color: var(--color-light);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
