--- a/src/components/DecoratedInput/DecoratedInput.module.css
+++ b/src/components/DecoratedInput/DecoratedInput.module.css
@@ -6,7 +6,12 @@
   margin-bottom: 10px;
 }
 
+.field:last-child {
+  margin-bottom: 0;
+}
+
 .label {
+  font-size: 12px;
   color: var(--color-text);
 }
 
