--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -33,6 +33,7 @@
   margin-bottom: 0;
   border-bottom: none;
   text-align: center;
+  font-size: 16px;
 }
 
 @media mobile {
