--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
     'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-light);
+  background-color: var(--color-logolight);
 }
 
 code {
